src/objects/Terms_and_Conditions__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contractor</fullName>
                </value>
                <value>
                    <fullName>Trade_Service_Pro</fullName>
                    <label>Trade Service Pro</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>100000</length>
        <type>Html</type>
    </fields>
    <label>Terms and Conditions</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Text__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Applications_Needing_Approval_Terms_and_Conditions</fullName>
        <filterScope>Queue</filterScope>
        <label>Applications Needing Approval</label>
        <queue>Applications_Needing_Approval</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>TCV-{000000}</displayFormat>
        <label>Terms and Conditions Version</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms and Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>